# Step-free-arithmetic-transformers

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: interpretability.yaml  pilot.yaml  scale_10m.yaml  train.yaml
data/add/: dev.jsonl  test.jsonl  train.jsonl
docs/: ARCHITECTURE.md  EXPERIMENTS.md  REPRODUCIBILITY.md  RESULTS.md
docs/archive/: ABLATION_GUIDE.md  ABLATION_IMPLEMENTATION.md  CHANGELOG.md  CUDA_ENABLED.md  GPU_SETUP.md  HOOKS_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INTERPRETABILITY_GUIDE.md  INTERPRETABILITY_HOOKS.md  OOD_DEPTH3_RESULTS.md  PATCHING_GUIDE.md  PATCHING_IMPLEMENTATION.md  PILOT_CHECKLIST.md  PILOT_DATASET.md  PILOT_SUMMARY.md  QUICK_START_GPU.md  READY_TO_TRAIN.md  SCALE_10M_CHECKLIST.md  SCALE_10M_SETUP.md  SETUP_COMPLETE.md  TRAINING_CONFIG_UPDATED.md  TRAINING_SUMMARY_ADDED.md  UV_CUDA_ISSUE.md
eval/: eval_ood_depth3.py  eval_pilot_ablation.py
probe/: probe_depth.py
scripts/: train_10m_scale.bat  train_10m_scale.sh  train_pilot.bat  verify_10m_config.py
scripts/archive/: eval_ablation.bat  eval_ablation.sh  example_interpretability.py  patch_pilot.bat  patch_pilot.py  quickstart.bat  quickstart.sh  test_gpu_enforcement.py  test_installation.py  test_interpretability_hooks.py  test_summary_format.py  test_training_startup.py  train_gpu.bat  train_gpu.sh  train_pilot.py
src/: __init__.py  analyze.py  eval.py  model.py  pilot_dataset.py  train.py
src/data/: generate.py  generate_depth3_dataset.py  generate_pilot_dataset.py
src/interpretability/: README.md  __init__.py  activation_patching.py  (+6 more)
(+5 files in other folders)
